@@ -2,7 +2,7 @@
 
 # Change to the fully qualified filename of your firmware file, if
 # firmware upload is needed by the scanner
-firmware /path/to/your/firmware/file.bin
+firmware /usr/share/sane/Esfw52.bin
 
 # If not automatically found you may manually specify a device name.
 
